name:                brainfree
version:             0.1.0.0
synopsis:            A brainfuck interpreter.
description:         A brainfuck interpreter.
homepage:            https://github.com/githubuser/brainfree#readme
author:              Jérôme Mahuet
maintainer:          jerome.mahuet@gmail.com
copyright:           2017 Jérôme Mahuet
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brainfree
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , free
                     , megaparsec
                     , vector
